--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,103 +1,8 @@
-.cdk-overlay-container,
-.cdk-global-overlay-wrapper {
-  pointer-events: none;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-.cdk-overlay-pane {
-  position: absolute;
-  pointer-events: auto;
-  box-sizing: border-box;
-  z-index: 1000;
-  display: flex;
-  max-width: 100%;
-  max-height: 100%;
-}
-.mat-dialog-container {
-  box-shadow: 0 11px 15px -7px #0003, 0 24px 38px 3px #00000024,
-    0 9px 46px 8px #0000001f;
-  background: white;
-  color: #000000de;
-}
-.mat-dialog-container {
-  display: block;
-  padding: 24px;
-  border-radius: 4px;
-  box-sizing: border-box;
-  overflow: auto;
-  outline: 0;
-  width: 100%;
-  height: 100%;
-  min-height: inherit;
-  max-height: inherit;
-}
-.cdk-visually-hidden {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-  white-space: nowrap;
-  outline: 0;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
-.cdk-overlay-pane {
-  position: absolute;
-  pointer-events: auto;
-  box-sizing: border-box;
-  z-index: 1000;
-  display: flex;
-  max-width: 100%;
-  max-height: 100%;
+.card-small span {
+  margin-left: 5px;
 }
 
-.cdk-global-overlay-wrapper {
-  display: flex;
-  position: absolute;
-  z-index: 1000;
-}
-.cdk-overlay-container,
-.cdk-global-overlay-wrapper {
-  pointer-events: none;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-.cdk-overlay-backdrop {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 1000;
-  pointer-events: auto;
-  -webkit-tap-highlight-color: transparent;
-  transition: opacity 0.4s cubic-bezier(0.25, 0.8, 0.25, 1);
-  opacity: 0;
-}
-.cdk-overlay-dark-backdrop {
-  background: rgba(0, 0, 0, 0.32);
-}
-.cdk-overlay-backdrop.cdk-overlay-backdrop-showing {
-  opacity: 1;
-}
-.cdk-overlay-container,
-.cdk-global-overlay-wrapper {
-  pointer-events: none;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-}
-
-.cdk-overlay-container {
-  position: fixed;
-  z-index: 1000;
+a.card.card-small.active {
+  background-color: #1976d2;
+  color: #fafafa;
 }
