--- a/src/app/pages/planets/planets.component.html
+++ b/src/app/pages/planets/planets.component.html
@@ -1,1 +1,66 @@
-<p>planets works!</p>
+<h2 class="title">Planets</h2>
+
+<mat-progress-spinner *ngIf="!dataLoaded" [mode]="'indeterminate'" [value]="50">
+</mat-progress-spinner>
+<section [ngClass]="{'data-loading': !dataLoaded}" >
+  <mat-form-field appearance="standard">
+    <mat-label>Filter</mat-label>
+    <input
+      matInput
+      (keyup)="applyFilter($event)"
+      placeholder="Search columns"
+      id="search"
+      name="search"
+
+      #input
+    />
+  </mat-form-field>
+
+  <mat-table
+    [dataSource]="dataSource"
+    class="mat-elevation-z8"
+    matSort
+    matSortActive="name"
+    matSortDisableClear
+    matSortDirection="asc"
+  >
+    <!-- <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
+    <td mat-cell *matCellDef="let emp"> {{emp[column]}} </td>
+  </ng-container> -->
+
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.name | ellipsis }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="population">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Population</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.population | ellipsis }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="terrain">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Terrain</th>
+      <td mat-cell *matCellDef="let element">
+        {{
+          element.terrain | ellipsis
+        }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="climate">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Climate</th>
+      <td mat-cell *matCellDef="let element">{{ element.climate }}</td>
+    </ng-container>
+    <ng-container matColumnDef="gravity">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Gravity</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.gravity | ellipsis }}
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </mat-table>
+</section>
