--- a/src/app/pages/planets/planets.component.html
+++ b/src/app/pages/planets/planets.component.html
@@ -16,51 +16,34 @@
     />
   </mat-form-field>
 
+
   <mat-table
-    [dataSource]="dataSource"
-    class="mat-elevation-z8"
-    matSort
-    matSortActive="name"
-    matSortDisableClear
-    matSortDirection="asc"
-  >
-    <!-- <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let emp"> {{emp[column]}} </td>
-  </ng-container> -->
+  [dataSource]="dataSource"
+  class="mat-elevation-z8"
+  matSort
+  matSortActive="name"
+  matSortDirection="asc"
+>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <ng-container *ngFor="let column of displayedColumns">
+    <ng-container
+      [matColumnDef]="column"
+    >
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+      <td mat-cell *matCellDef="let row">
+        <span *ngIf="row[column].length < 19">{{ row[column] }}</span>
+        <span
+          *ngIf="row[column].length > 19"
+          [matTooltip]="populateTooltip(column, row)"
+          >{{ row[column] | ellipsis }}</span
+        >
+      </td>
+    </ng-container>
+  </ng-container>
+</mat-table>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.name | ellipsis }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="population">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Population</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.population | ellipsis }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="terrain">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Terrain</th>
-      <td mat-cell *matCellDef="let element">
-        {{
-          element.terrain | ellipsis
-        }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="climate">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Climate</th>
-      <td mat-cell *matCellDef="let element">{{ element.climate }}</td>
-    </ng-container>
-    <ng-container matColumnDef="gravity">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Gravity</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.gravity | ellipsis }}
-      </td>
-    </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </mat-table>
+
+
 </section>
