--- a/src/app/pages/starships/starships.component.html
+++ b/src/app/pages/starships/starships.component.html
@@ -23,38 +23,23 @@
     matSortDisableClear
     matSortDirection="asc"
   >
-    <!-- <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let emp"> {{emp[column]}} </td>
-  </ng-container> -->
-
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.name | ellipsis }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="model">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Model</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.model | ellipsis }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="manufacturer">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Manufacturer</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.manufacturer | ellipsis }}
-      </td>
-    </ng-container>
-    <ng-container matColumnDef="passengers">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Passengers</th>
-      <td mat-cell *matCellDef="let element">{{ element.passengers }}</td>
-    </ng-container>
-    <ng-container matColumnDef="starship_class">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Starship Class</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.starship_class | ellipsis }}
-      </td>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <ng-container *ngFor="let column of displayedColumns">
+      <ng-container
+        [matColumnDef]="column"
+        *ngIf="column != 'view' && column != 'delete'"
+      >
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ column }}</th>
+        <td mat-cell *matCellDef="let row">
+          <span *ngIf="row[column].length <= 20">{{ row[column] }}</span>
+          <span
+            *ngIf="row[column].length > 21"
+            [matTooltip]="populateTooltip(column, row)"
+            >{{ row[column] | ellipsis }}</span
+          >
+        </td>
+      </ng-container>
     </ng-container>
 
     <ng-container matColumnDef="view">
@@ -83,7 +68,5 @@
         </button>
       </td>
     </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </mat-table>
 </section>
